--- a/2023.12.4-2023.12.10/2023.12.4-2023.12.10.md
+++ b/2023.12.4-2023.12.10/2023.12.4-2023.12.10.md
@@ -21,7 +21,7 @@
 
 ### 3D Gaussian Splatting
 
-笔记链接：[3D Gaussian](https://github.com/xu-hui-yao/Paper/blob/main/3D Gaussian/note.md)
+笔记链接：[[3D Gaussian](https://github.com/xu-hui-yao/Paper/blob/main/3D Gaussian/note.md)](https://github.com/xu-hui-yao/Paper/blob/main/3D%20Gaussian/note.md)
 
 
 
