--- a/2024.3.18-2024.3.24/2024.3.18-2024.3.24.md
+++ b/2024.3.18-2024.3.24/2024.3.18-2024.3.24.md
@@ -6,7 +6,7 @@
 
 1. 写完开题报告，提交毕设系统。
 2. Cuda debug完成，问题来源于在多层材质BSDF模型在generate_path方法调用单层材质BSDF模型时，单层材质的BSDF没有考虑剔除半程向量采样非法的情况。因为半程向量的采样是在半球上采样，虽然半程向量是合理的，但是因此计算的反射/折射光线是可能非法的，需要识别这种情况。
-3. 阅读Drjit文档，在Mitsuba3上实现Position free monte carlo method for layered bsdf方法，在数据集并行上遇到了问题，需要想办法解决。
+3. 阅读Drjit文档，在Mitsuba3上实现Position free monte carlo method for layered bsdf方法，在数据流并行和上遇到了问题，需要想办法解决。
 
 
 
